<resources>
    <string name="app_name">Burza Hajsu</string>
    <string name="title_activity_maps">Map</string>

    <string name="lottery_enter">Spróbuj szczęścia!</string>
    <string name="lottery_ask">Dodaj kupony</string>
    <string name="lottery_play">Zagraj</string>
    <string name="lottery_cancel">Anuluj</string>
    <string name="lottery_inform">Powiadom innych o burzy</string>
    <string name="lottery_finished">Wyłoniony zwycięzca</string>
    <string name="lottery_invalid">Poza burzą</string>
    <string name="lottery_buy">Kup</string>

    <string name="connection_failed">Utracono połączenie</string>
    <string name="reconnect">Połącz</string>
    <string name="login_hint">Login</string>
    <string name="login">Zaloguj się</string>
    <string name="friendList">Lista znajomych</string>
</resources>
