<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:textAlignment="center"
            android:textSize="24sp"
            android:text="@string/lottery_ask"/>

    <com.shawnlin.numberpicker.NumberPicker
            android:id="@+id/number_picker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_margin="24dp"
            app:np_width="64dp"
            app:np_height="180dp"
            app:np_dividerColor="@color/colorPrimary"
            app:np_max="59"
            app:np_min="0"
            app:np_selectedTextColor="@color/colorPrimary"
            app:np_textColor="@color/colorPrimary"
            app:np_value="3"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp">

        <com.google.android.material.button.MaterialButton
                android:id="@+id/lottery_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:backgroundTint="@android:color/holo_red_dark"
                android:text="@string/lottery_cancel"
                android:layout_margin="8dp"
                android:textSize="16sp"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/lottery_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_alignParentEnd="true"
                android:text="@string/lottery_buy"
                android:textSize="16sp"/>
    </RelativeLayout>
</LinearLayout>