<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            tools:context=".LoadActivity">

        <ImageView
                android:layout_width="224dp"
                android:layout_height="224dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/logo"
                android:id="@+id/imageView"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="32sp"
                android:textAlignment="center"
                android:textStyle="bold"/>
        <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/login_hint"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                tools:ignore="Autofill"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                style="@style/MaterialFABWithText"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="0dp"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:textColor="@color/colorAccent"
                app:backgroundTint="@android:color/white"
                app:cornerRadius="32dp"
                app:iconPadding="12dp"
                android:hint="@string/login"
                app:iconSize="24dp"
                app:iconTint="@color/colorAccent"
                app:strokeColor="@color/colorAccent"
                app:strokeWidth="2dp"/>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>